syntax = "proto3";

package order;

option go_package = "github.com/yourproject/common/protos/order";

service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (OrderResponse);
    rpc GetOrder (GetOrderRequest) returns (OrderResponse);
    rpc GetUserOrders (GetUserOrdersRequest) returns (GetUserOrdersResponse);
}

message OrderItem {
    string product_id = 1;
    int32 quantity = 2;
    float price = 3;
}

message CreateOrderRequest {
    string user_id = 1;
    repeated OrderItem items = 2;
}

message GetOrderRequest {
    string id = 1;
}

message GetUserOrdersRequest {
    string user_id = 1;
    int32 limit = 2;
    int32 offset = 3;
}

message OrderResponse {
    string id = 1;
    string user_id = 2;
    repeated OrderItem items = 3;
    float total = 4;
    string status = 5;
    string created_at = 6;
}

message GetUserOrdersResponse {
    repeated OrderResponse orders = 1;
    int32 total = 2;
}