syntax = "proto3";

package user;

option go_package = "github.com/yourproject/common/protos/user";

service UserService {
    rpc CreateUser (CreateUserRequest) returns (UserResponse);
    rpc GetUser (GetUserRequest) returns (UserResponse);
    rpc AuthenticateUser (AuthRequest) returns (AuthResponse);
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message GetUserRequest {
    string id = 1;
}

message UserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
    string created_at = 4;
}

message AuthRequest {
    string email = 1;
    string password = 2;
}

message AuthResponse {
    string token = 1;
    UserResponse user = 2;
}